test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/extra_credit/switch_skip_static_initializer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[41]:
  int
  identifier(a)
  =
  const int(3)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  switch
  (
  identifier(a)
  )
  {
  case
  const int(1)
  :
  ;
  static
  int
  identifier(x)
  =
  const int(10)
  ;
  identifier(x)
  =
  const int(0)
  ;
  case
  const int(3)
  :
  return
  identifier(x)
  ;
  }
  return
  const int(0)
  ;
  }
