test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/static_and_extern.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[15]:
  static
  extern
  int
  identifier(a)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
